Subir version con mejoras del filtro y un cambio en nginx que acepta 20mb